# trading

./: .gitignore  package-lock.json  package.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  generate_icons.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/market_data/: angel_one.rs  auth.rs  mock_feed.rs  mod.rs  sharekhan.rs  storage.rs  yahoo_fin.rs  zerodha.rs
