[package]
name = "nexus-trading-core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tungstenite = "0.23"
tokio-tungstenite = "0.23"
dotenvy = "0.15"
totp-lite = "2.0"
base32 = "0.5"
futures-util = "0.3"
sha1 = "0.10"
keyring = { version = "2.1" }
